Fixed clipped dropdown content width

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -2951,3 +2951,6 @@ zem-submission-status {
     }
 }
 
+.publishers-blacklist-bigdrop {
+    width: 240px !important;
+}
